# hacspec

./: .gitignore  .gitmodules  Arithmetic.md  Bls-hash.v  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Language.md  Readme.md  aes256.rs  aesgcm.rs  aliases.js  allowed_item_list.json  crates.js  flake.naersk  index.html  rust-toolchain  search-index.js  settings.html  source-files.js  test-examples.sh  test_aes.rs  test_aesgcm.rs
coq_ssprove/: .gitignore  README.md  _CoqProject  coq-hacspec-ssprove.opam  hacspec_coq_ssprove.opam
coq_ssprove/_vc/: Hacspec_Aes.v  Hacspec_Aes128_Gcm.v  Hacspec_Aes_Jazz.v  Hacspec_Bip_340.v  Hacspec_Bls12_381.v  Hacspec_Bls12_381_Hash.v  Hacspec_Chacha20.v  Hacspec_Chacha20poly1305.v  Hacspec_Coverage_Test.v  Hacspec_Curve25519.v  Hacspec_Ecdsa_P256_Sha256.v  Hacspec_Ed25519.v  Hacspec_Edwards25519.v  Hacspec_Edwards25519_Hash.v  Hacspec_Gf128.v  Hacspec_Gimli.v  Hacspec_Hkdf.v  Hacspec_Hmac.v  Hacspec_Linalg.v  Hacspec_Ntru_Prime.v  Hacspec_P256.v  Hacspec_Poly1305.v  Hacspec_Riot_Bootloader.v  Hacspec_Riot_Runqueue.v  Hacspec_Ristretto.v  Hacspec_Rsa_Fdh_Vrf.v  Hacspec_Rsa_Pkcs1.v  Hacspec_Sha1.v  Hacspec_Sha256.v  Hacspec_Sha3.v  Hacspec_Sha512.v  Hacspec_Xor.v  Strobe.v  Tls_Cryptolib.v
coq_ssprove/docker_build/: Dockerfile
coq_ssprove/src/: Aes.v  ChoiceEquality.v  Hacspec_Aes.v  Hacspec_Aes128_Gcm.v  Hacspec_Aes_Jazz.v  Hacspec_Bip_340.v  Hacspec_Bls12_381.v  Hacspec_Bls12_381_Hash.v  Hacspec_Chacha20.v  Hacspec_Chacha20poly1305.v  Hacspec_Coverage_Test.v  Hacspec_Curve25519.v  Hacspec_Ecdsa_P256_Sha256.v  Hacspec_Ed25519.v  Hacspec_Edwards25519.v  Hacspec_Edwards25519_Hash.v  Hacspec_Gf128.v  Hacspec_Gimli.v  Hacspec_Hkdf.v  Hacspec_Hmac.v  Hacspec_Lib.v  Hacspec_Lib_Comparable.v  Hacspec_Lib_Pre.v  Hacspec_Linalg.v  Hacspec_Merlin.v  Hacspec_Ntru_Prime.v  Hacspec_P256.v  Hacspec_Poly1305.v  Hacspec_Poly1305_Both.v  Hacspec_Poly1305_Pure.v  Hacspec_Riot_Bootloader.v  Hacspec_Riot_Runqueue.v  Hacspec_Ristretto.v  Hacspec_Rsa_Fdh_Vrf.v  Hacspec_Rsa_Pkcs1.v  Hacspec_Sha1.v  Hacspec_Sha256.v  Hacspec_Sha3.v  Hacspec_Sha512.v  Hacspec_Tests.v  (+7 more)
examples/: .gitignore  Cargo.toml  rust-toolchain  typecheck_examples.sh
examples-unsafe/: Cargo.toml  Readme.md
examples-unsafe/benches/: benchmarks.rs
examples-unsafe/examples/: aes.rs  chacha20.rs
examples-unsafe/src/: lib.rs  ntt.rs
examples-unsafe/tests/: for_test_ntru_prime_convert_sage.py  test_aes.rs  test_aesgcm.rs  test_blake2b.rs  test_fips202.rs  test_gf128.rs  test_nist_curves.rs  test_ntru_prime.rs  test_ntt.rs  test_p384.rs  test_sha2.rs
examples/aes/: Cargo.toml
examples/aes-ccm/: Cargo.toml
examples/aes128-gcm/: Cargo.toml
examples/aes_jazz/: Cargo.toml  build.rs
examples/auction/: Cargo.toml
examples/bip-340/: Cargo.toml
examples/bls12-381/: Cargo.toml
examples/bls12-381-hash/: Cargo.toml
examples/chacha20/: Cargo.toml
examples/chacha20poly1305/: Cargo.toml
examples/coverage-example/: Cargo.toml
examples/coverage_test/: Cargo.toml
examples/curve25519/: Cargo.toml
examples/ecdsa-p256-sha256/: Cargo.toml
examples/ed25519/: Cargo.toml
examples/edwards25519/: Cargo.toml
examples/edwards25519-ecvrf/: Cargo.toml
examples/edwards25519-hash/: Cargo.toml
examples/gf128/: Cargo.toml
examples/gimli/: Cargo.toml
examples/gmac/: Cargo.toml
examples/hacspec-chacha20/: Cargo.toml
examples/hacspec-chacha20poly1305/: Cargo.toml
examples/hacspec-gimli/: Cargo.toml
examples/hacspec-ntru-demo/: Cargo.toml
examples/hacspec-ntru-prime/: Cargo.toml
examples/hacspec-poly1305/: Cargo.toml
examples/hacspec-riot-bootloader/: Cargo.toml
examples/hkdf/: Cargo.toml
examples/hmac/: Cargo.toml
examples/linalg/: Cargo.toml
examples/merlin/: Cargo.toml
examples/no_std/: Cargo.toml  README.md
examples/ntru-prime/: Cargo.toml
examples/p256/: Cargo.toml
examples/pearlite-example/: Cargo.toml
examples/poly1305/: Cargo.toml
examples/riot-runqueue/: Cargo.toml
examples/ristretto/: Cargo.toml
examples/rsa/: Cargo.toml
examples/rsa-fdh-vrf/: Cargo.toml
examples/rsa-pkcs1/: Cargo.toml
examples/rsa-pkcs22/: Cargo.toml
examples/sha1/: Cargo.toml
examples/sha256/: Cargo.toml
examples/sha3/: Cargo.toml
examples/sha512/: Cargo.toml
examples/tests/: Cargo.toml
examples/xor/: Cargo.toml
hacspec/: Cargo.toml  README.md  all.html  fn.div_ceil.html  fn.u128_from_be_bytes.html  fn.u128_from_le_bytes.html  fn.u128_to_be_bytes.html  fn.u32_from_be_bytes.html  fn.u32_from_le_bytes.html  fn.u32_from_le_bytes_u32.html  fn.u32_to_be_bytes.html  fn.u32_to_le_bytes.html  fn.u64_to_be_bytes.html  fn.u64_to_be_bytes_u64.html  fn.u64_to_le_bytes.html  get_func_stats.sh  index.html  macro._array_base.html  macro._implement_numeric_signed_public.html  macro._implement_numeric_signed_secret!.html  macro._implement_numeric_signed_secret.html  macro._implement_numeric_unsigned_public.html  macro._implement_numeric_unsigned_secret!.html  macro._implement_numeric_unsigned_secret.html  macro._public_array!.html  macro._public_array.html  macro._secret_array.html  macro.array.html  macro.assert_bytes_eq!.html  macro.assert_bytes_eq.html  macro.assert_secret_array_eq!.html  macro.assert_secret_array_eq.html  macro.both_arrays.html  macro.both_bytes.html  macro.bytes.html  macro.create_test_vectors!.html  macro.create_test_vectors.html  macro.field_integer!.html  macro.field_integer.html  macro.generic_array.html  (+36 more)
hacspec-attributes/: Cargo.toml
hacspec-attributes/src/: lib.rs
hacspec-dev/: Cargo.toml  README.md
hacspec-dev/src/: external_sig.rs  lib.rs  prelude.rs  rand.rs  test_vectors.rs
hacspec-dev/tests/: test_test_vectors.rs
hacspec-lang/: Cargo.toml  Readme.md
hacspec-lang/src/: ast_to_rustspec.rs  cli.yml  hir_to_rustspec.rs  main.rs  (+3 more)
hacspec-lib/: Cargo.toml  README.md
hacspec-sig/: Cargo.toml
language/: Cargo.toml  Readme.md  rust-toolchain
lib/: Cargo.toml  README.md  get_func_stats.sh
ntru_tester/: Cargo.toml
provider/: Cargo.toml  Readme.md
spec-examples/: Cargo.toml
unsafe-hacspec-examples/: Cargo.toml
(+26031 files in other folders)
