[workspace]
members = [
    "lib",
    "provider",
    "utils/dev",
    "utils/derive",
    "utils/evercrypt-provider",
    "utils/secret-integers",
    "utils/abstract-integers",
    "utils/attributes",
    "utils/rc-bench",
    "utils/rc-tests",
    "utils/util",
    "language",
    "examples/curve25519",
    "examples/chacha20",
    "examples/poly1305",
    "examples/chacha20poly1305",
    "examples/gimli",
    "examples/sha256",
    "examples/sha3",
    "examples/ntru-prime",
    "examples-unsafe",
    "examples/riot-bootloader",
]
default-members = [
    "lib",
    "provider",
    "utils/dev",
    "utils/derive",
    "utils/secret-integers",
    "utils/abstract-integers",
    "utils/attributes",
    "utils/util",
    "examples/curve25519",
    "examples/chacha20",
    "examples/poly1305",
    "examples/chacha20poly1305",
    "examples/gimli",
    "examples/sha256",
    "examples/sha3",
    "examples/ntru-prime",
    "examples-unsafe",
    "examples/riot-bootloader",
]

[profile.release]
debug = true
