[workspace]
members = [
    "lib",
    "protocols/tls_cryptolib",
    "provider",
    "utils/dev",
    "utils/derive",
    "utils/evercrypt-provider",
    "utils/secret-integers",
    "utils/abstract-integers",
    "utils/attributes",
    "utils/rc-bench",
    "utils/rc-tests",
    "utils/util",
    "examples/curve25519",
    "examples/chacha20",
    "examples/poly1305",
    "examples/chacha20poly1305",
    "examples/gimli",
    "examples/sha256",
    "examples/sha3",
    "examples/ntru-prime",
    "examples-unsafe",
    "examples/riot-bootloader",
    "examples/riot-runqueue",
    "examples/hmac",
    "examples/hkdf",
    "examples/p256",
    "examples/bls12-381",
    "examples/ecdsa-p256-sha256",
    "examples/aes",
    "examples/gf128",
    "examples/aes128-gcm",
    "examples/bls12-381-hash",
]
default-members = [
    "lib",
    "protocols/tls_cryptolib",
    "provider",
    "utils/dev",
    "utils/derive",
    "utils/secret-integers",
    "utils/abstract-integers",
    "utils/attributes",
    "utils/util",
    "examples/curve25519",
    "examples/chacha20",
    "examples/poly1305",
    "examples/chacha20poly1305",
    "examples/gimli",
    "examples/sha256",
    "examples/sha3",
    "examples/ntru-prime",
    "examples-unsafe",
    "examples/riot-bootloader",
    "examples/riot-runqueue",
    "examples/hmac",
    "examples/hkdf",
    "examples/p256",
    "examples/bls12-381",
    "examples/ecdsa-p256-sha256",
    "examples/aes",
    "examples/gf128",
    "examples/aes128-gcm",
    "examples/bls12-381-hash",
]
exclude = [ "language" ]
