opam-version: "2.0"
name: "coq-hacspec-ssprove"
version: "dev"
synopsis: "Hacspec coq library"
maintainer: ""
authors: [""]
homepage: "https://github.com/hacspec/hacspec"
bug-reports: "https://github.com/hacspec/hacspec/issues"
depends: [
  "ssprove" {= "dev"}
  "jasmin" {= "dev"}
  "coq" {>= "8.15.2"}
]
build: [
  ["coq_makefile" "-f" "_CoqProject" "-o" "Makefile"]
  [make "clean"]
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
