[package]
name = "unsafe-hacspec-examples"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[dependencies]
hacspec-lib = { path = "../lib" }
hacspec-derive = { path = "../utils/derive" }
secret_integers = { path = "../utils/secret-integers" }
abstract_integers = { path = "../utils/abstract-integers" }
hacspec-chacha20 = { path = "../examples/hacspec-chacha20" }
hacspec-poly1305 = { path = "../examples/hacspec-poly1305" }
hacspec-chacha20poly1305 = { path = "../examples/hacspec-chacha20poly1305" }
hacspec-sha3 = { path = "../examples/hacspec-sha3" }

[dev-dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
rayon = "1.3.0"
hacspec-dev = { path = "../utils/dev" }
criterion = "^0.3"
rand = "^0.7"

[[bench]]
name = "benchmarks"
harness = false
