[workspace]
members = [
    "./curve25519",
    "./chacha20",
    "./linalg",
    "./poly1305",
    "./chacha20poly1305",
    "./gimli",
    "sha256",
    "sha3",
    "ntru-prime",
    # "examples-unsafe",
    "riot-bootloader",
    "riot-runqueue",
    "hmac",
    "hkdf",
    "p256",
    "bls12-381",
    "ecdsa-p256-sha256",
    "aes",
    "gf128",
    "aes128-gcm",
    "bls12-381-hash",
    "ed25519",
    "edwards25519",
    "no_std",
    "rsa-pkcs1",
]