[workspace]
members = [
    "protocols/tls_cryptolib",
    "curve25519",
    "chacha20",
    "ristretto",
    "linalg",
    "merlin",
    "poly1305",
    "chacha20poly1305",
    "gimli",
    "sha1",
    "sha256",
    "sha3",
    "ntru-prime",
    "riot-bootloader",
    "riot-runqueue",
    "hmac",
    "hkdf",
    "p256",
    "bls12-381",
    "ecdsa-p256-sha256",
    "aes",
    "aes_jazz",
    "gf128",
    "aes128-gcm",
    "bls12-381-hash",
    "ed25519",
    "edwards25519",
    "edwards25519-hash",
    "edwards25519-ecvrf",
    "rsa-pkcs1",
    "bip-340",
    "rsa-fdh-vrf",
    "coverage_test",
    "pearlite-example"
]
