[package]
name = "hacspec-attributes"
version = "0.1.0"
authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.17", features= ["full", "visit"] }
proc-macro2 = { version = "1.0.10", features = ["span-locations"] }
ansi_term = "0.12.1"
quote = "1.0"
serde = "1.0"
serde_json = "1.0"
hacspec-sig = { path = "../hacspec-sig" }

[features]
default = []
print_attributes = []
update_allowlist = [ "print_attributes" ]
