[package]
name = "hacspec-lang"
version = "0.1.0"
authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.1", features = ["yaml"]}
pretty = "0.10.0"
im = "15.0.0"
itertools = "0.9.0"
walkdir = "2.3.1"
hacspec-dev = { path = "../hacspec-dev" }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "1.0.1"
