[package]
name = "hacspec-lib"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"

secret_integers = { path = "../secret-integers" }
abstract_integers = { path = "../abstract-integers" }
hacspec-attributes = { path = "../hacspec-attributes",  optional = true }

[features]
use_attributes = ["hacspec-attributes", "hacspec-attributes/print_attributes"]

[dev-dependencies]
rand = "0.7"
