[package]
name = "hacspec-sig"
version = "0.1.0"
authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
syn = { version = "1.0.17", features= ["full", "visit"] }
