[package]
name = "hacspec"
version = "0.2.0-beta.2"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hacspec"
description = "The hacspec compiler."
readme = "Readme.md"
repository = "https://github.com/hacspec/hacspec"

[[bin]]
name = "cargo-hacspec"
path = "src/bin.rs"

[[bin]]
name = "hacspec-driver"
path = "src/main.rs"

[dependencies]
hacspec-util = { path = "../utils/util", version = "0.1.0-beta.1" }
pretty = "0.10.0"
im = "15.0.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
walkdir = "2.3.1"
serde_json = "1.0"
serde = "1.0"
heck = "0.3.1"
regex = "1.3.9"

[dev-dependencies]
assert_cmd = "1.0.1"
hacspec-lib = { path = "../lib" }
hacspec-chacha20 = { path = "../examples/chacha20" }
hacspec-poly1305 = { path = "../examples/poly1305" }
hacspec-chacha20poly1305 = { path = "../examples/chacha20poly1305" }
hacspec-ntru-prime = { path = "../examples/ntru-prime" }
hacspec-sha3 = { path = "../examples/sha3" }
hacspec-sha256 = { path = "../examples/sha256" }
hacspec-curve25519 = { path = "../examples/curve25519" }
hacspec-riot-bootloader = { path = "../examples/riot-bootloader" }