[package]
name = "hacspec"
version = "0.2.0-beta.4"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hacspec"
description = "The hacspec compiler."
readme = "Readme.md"
repository = "https://github.com/hacspec/hacspec"

[[bin]]
name = "cargo-hacspec"
path = "src/bin.rs"

[[bin]]
name = "hacspec-driver"
path = "src/main.rs"

[dependencies]
hacspec-util = { path = "../utils/util", version = "0.1.0-beta.1" }
pretty = "0.10.0"
im = "~15.1.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
walkdir = "2.3.1"
serde_json = "1.0"
heck = "0.3.1"
regex = "1.3.9"
glob = "*"
serde = { version = "1.0.125", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
backtrace = { version = "0.3", optional = true }
num = "0.4"

pearlite-syn = { git = "https://github.com/xldenis/creusot", rev = "ebe88ac51dc9ceba3d18ede3351ccee4c4b121bd" } # branch = "master"

syn = { version = "*", features = ["full", "extra-traits"] }
quote = "*"
proc-macro2 = "*"

# thin-vec = { version = "0.2.10" }

[features]
dev = [ "backtrace" ]

[dev-dependencies]
assert_cmd = "1.0.1"

[package.metadata.rust-analyzer]
rustc_private=true
