[package]
name = "hacspec-lib"
version = "0.1.0-beta.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hacspec-lib"
description = "The hacspec library."
readme = "README.md"
repository = "https://github.com/hacspec/hacspec"

[dependencies]
num = { version = "0.4", default-features = false }
secret_integers = { path = "../utils/secret-integers", optional = true, version = "0.1.7" } #FIXME: publish new version
abstract_integers = { path = "../utils/abstract-integers", version = "0.1.5", default-features = false } #FIXME: publish new version
hacspec-attributes = { path = "../utils/attributes",  optional = true, version = "0.1.0-beta.1" }

[dependencies.creusot-contracts]
git = "https://github.com/xldenis/creusot/"
# branch = "master"
rev = "7763b3ae77205fba83182b9a6c3e69ad0b12fec7"
package = "creusot-contracts"

[features]
default = ["std"]
alloc = ["secret_integers"]
std = ["alloc", "secret_integers", "num/std", "abstract_integers/std"]

use_attributes = ["hacspec-attributes", "hacspec-attributes/print_attributes"]
contracts = []

[dev-dependencies]
rand = "0.8"
hacspec-dev = { path = "../utils/dev" }
criterion = "0.4"

[[bench]]
name = "copy"
harness = false
