[package]
name = "hacspec-provider"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[dependencies]
hacspec-lib = { path = "../lib" }
hacspec-chacha20poly1305 = { path = "../examples/hacspec-chacha20poly1305" }
hacspec-chacha20 = { path = "../examples/hacspec-chacha20" }
hacspec-poly1305 = { path = "../examples/hacspec-poly1305" }
rand = { version = "0.7", optional = false }
rand_core = { version = "0.5", optional = false }

[dev-dependencies]
evercrypt-provider = { path = "../utils/evercrypt-provider" }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
