[package]
name = "hacspec-provider"
version = "0.1.0-beta.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>", "Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hacspec-provider"
description = "Cryptographic provider with hacspec primitives using the RustCrypto APIs."
readme = "../README.md"
repository = "https://github.com/hacspec/hacspec"

[dependencies]
hacspec-lib = { path = "../lib", version = "0.1.0-beta.1" }
hacspec-chacha20poly1305 = { path = "../examples/chacha20poly1305", version = "0.1.0" }
hacspec-chacha20 = { path = "../examples/chacha20", version = "0.1.0" }
hacspec-poly1305 = { path = "../examples/poly1305", version = "0.1.0" }
aead = { version = "0.4", features = ["alloc"] }

[dev-dependencies]
evercrypt-provider = { path = "../utils/evercrypt-provider" }
serde_json = "1.0"
serde = {version = "=1.0.156", features = ["derive"]}
