[package]
name = "hacspec-examples"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# TODO: this need to change for releases
hacspec = { path= "../hacspec" }
secret_integers = { path = "../secret-integers" }
abstract_integers = { path = "../abstract-integers" }
