[package]
name = "hacspec-examples"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hacspec-lib = { path = "../hacspec-lib" }
hacspec-derive = { path = "../hacspec-derive" }
secret_integers = { path = "../secret-integers" }
abstract_integers = { path = "../abstract-integers" }
hacspec-chacha20 = { path = "../hacspec-examples/hacspec-chacha20" }
hacspec-poly1305 = { path = "../hacspec-examples/hacspec-poly1305" }

[dev-dependencies]
# FIXME: Why?
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
rayon = "1.3.0"
hacspec-dev = { path = "../hacspec-dev" }
