[package]
name = "hacspec-aes128-gcm"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/aes128-gcm.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-aes = { path = "../aes", version = "0.1.0" }
hacspec-gf128 = { path = "../gf128", version = "0.1.0" }

[dev-dependencies]
serde_json = "1.0"
serde = {version = "=1.0.156", features = ["derive"]}
hacspec-dev = { path = "../../utils/dev" }
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false
