[package]
name = "hacspec-bip-340"
version = "0.1.0"
authors = ["Jonas Nick <jonasd.nick@gmail.com>"]
edition = "2018"
description = "A BIP 340 implementation compatible with https://github.com/bitcoin/bips/blob/master/bip-0340.mediawiki."

[lib]
path = "src/bip-340.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-sha256 = { path = "../sha256" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
serde_json = "1.0"
serde = {version = "=1.0.156", features = ["derive"]}
hacspec-dev = { path = "../../utils/dev" }


