[package]
name = "hacspec-bls12-381-hash"
version = "0.1.0"
authors = ["Kasper S. Nielsen <Kasper@s-nielsen.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/bls12-381-hash.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-bls12-381 = { path = "../bls12-381" }
hacspec-sha256 = { path = "../sha256" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
h2c-rust-ref = { git = "https://github.com/armfazh/h2c-rust-ref" }
redox-ecc = { git = "https://github.com/armfazh/redox-ecc" }
amcl = { version = "0.3.0",  git = "https://github.com/apache/incubator-milagro-crypto-rust", features = ["bls381"] } # published crate haven't implemented hash to curve
pairing-plus = { git = "https://github.com/algorand/pairing-plus" } # published crate have a different implentation of sgn0
sha2-08 = { package = "sha2", version = "0.8" }
sha2-09 = { package = "sha2", version = "0.9" }
bls12_381 = {version = "0.6.0", features = ["experimental"] }
curve_arithmetic = { git = "https://github.com/Concordium/concordium-base" }
pairing = "0.15"
group = "0.2"
