[package]
name = "hacspec-bls12-381"
version = "1.0.0"
authors = ["Kasper S. Nielsen <Kasper@s-nielsen.dk>", "Mathias Rud Laursen <mathias_rud@hotmail.com>"]
edition = "2018"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/hacspec-bls12-381.rs"

[dependencies.creusot-contracts]
git = "https://github.com/xldenis/creusot/"
branch = "master"
package = "creusot-contracts"

[dependencies]
hacspec-lib = { path = "../../lib" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
