[package]
name = "hacspec-chacha20"
version = "0.1.0"
authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hacspec-chacha20"
description = "hacspec chacha20 block cipher"
readme = "README.md"
repository = "https://github.com/hacspec/hacspec"

[lib]
path = "src/chacha20.rs"

[dependencies]
hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
creusot-contracts = { git = "https://github.com/xldenis/creusot", rev = "417b958b11c5a4a4f89da510b9e0a87433d5836e" } # branch = "master"

[dev-dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
rayon = "1.3.0"
hacspec-dev = { path = "../../utils/dev" }
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false
