[package]
name = "hacspec-curve25519"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/curve25519.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-derive = { path = "../../utils/derive" }
secret_integers = { path = "../../utils/secret-integers" }
abstract_integers = { path = "../../utils/abstract-integers" }
