[package]
name = "hacspec-ecdsa-p256-sha256"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/ecdsa.rs"

[dependencies]
hacspec-lib = { path = "../../lib", version = "0.1.0-beta.1" }
hacspec-p256 = { path = "../p256" }
hacspec-sha256 = { path = "../sha256" }

[dev-dependencies]
serde_json = "1.0"
serde = {version = "=1.0.156", features = ["derive"]}
hacspec-dev = { path = "../../utils/dev" }
