[package]
name = "hacspec-ed25519"
version = "1.0.0"
authors = ["Kasper S. Nielsen <Kasper@s-nielsen.dk>", "Mathias Rud Laursen <mathias_rud@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/ed25519.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-attributes = { path = "../../utils/attributes", features = ["hacspec_unsafe"] }
ed25519-dalek = "1"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
curve25519-dalek = "3.2.0"



