[package]
name = "hacspec-edwards25519"
version = "0.1.0"
authors = ["Kasper S. Nielsen <ksn@cs.au.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/edwards25519.rs"

[dependencies]
hacspec-lib = { path = "../../lib" }
hacspec-sha512 = { path = "../sha512" }
